@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.4-13
-Date: 2011-6-19
+Version: 1.4-14
+Date: 2011-11-21
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
@@ -9,7 +9,7 @@ Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Maria Grazia Pittau <grazia@stat.columbia.edu>,
         Jouni Kerman <jouni@kerman.com> and
         Tian Zheng <tzheng@stat.columbia.edu>
-Maintainer: Yu-Sung Su <yusung@gmail.com>
+Maintainer: Yu-Sung Su <suyusung@tsinghua.edu.cn>
 Depends: R (>= 2.9.0), methods, MASS, Matrix (>= 0.999375-33), lme4 (>= 0.999375-32), R2WinBUGS, abind
 Suggests: foreign
 Imports: Matrix, lme4, stats
